src/objects/CRMC_PP__GridView__c.object
<CustomObject>
    <description>Saved view of a grid - saves columns, filters, grouping, and sorting.</description>
    <fields>
        <fullName>CRMC_PP__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>View Category</label>
        <referenceTo>CRMC_PP__View_Category__c</referenceTo>
        <relationshipLabel>ActionGrid Views</relationshipLabel>
        <relationshipName>ActionGrid_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Context__c</fullName>
        <description>Context the view was saved from, Page Layout as a related list, ActionGrid Explorer, or Custom VF page.</description>
        <inlineHelpText>Context the view was saved from, Page Layout as a related list, ActionGrid Explorer, or Custom VF page.</inlineHelpText>
        <label>Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce Page</fullName>
                    <default>true</default>
                    <label>Visualforce Page</label>
                </value>
                <value>
                    <fullName>Explorer</fullName>
                </value>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMC_PP__Description__c</fullName>
        <description>Description of the ActionGrid View</description>
        <inlineHelpText>Description of the ActionGrid View</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is the default view for the given context and the baseline that an ActionGrid will revert to when reset.</description>
        <inlineHelpText>Indicates this is the default view for the given context and the baseline that an ActionGrid will revert to when reset.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__JSON__c</fullName>
        <description>Serialized JSON that records the state of the view</description>
        <label>JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__ObjectName__c</fullName>
        <description>Object this view belongs to</description>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Privacy__c</fullName>
        <description>Indicates if a ActionGrid view should be private to the owner or publicly available to all users.</description>
        <inlineHelpText>Indicates if a ActionGrid view should be private to the owner or publicly available to all users.</inlineHelpText>
        <label>Privacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Public Read-Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ActionGrid View</label>
    <listViews>
        <fullName>CRMC_PP__AllViews</fullName>
        <columns>NAME</columns>
        <columns>CRMC_PP__IsDefault__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CRMC_PP__Description__c</columns>
        <columns>CRMC_PP__ObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Views</label>
    </listViews>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActionGrid Views</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>